<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".AddSongToPlaylistActivity">

    <!-- Título principal de la pantalla -->
    <TextView
        android:id="@+id/tituloPantallaAgregarSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp"
        />

    <!-- Título de selección de archivo -->
    <TextView
        android:id="@+id/tituloSeleccionarFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_add_song_screen_to_playlist"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tituloPantallaAgregarSong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"
        />

    <!-- Botón de selección de archivo -->
    <Button
        android:id="@+id/botonSeleccionarArchivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_buscar_cancion"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_background_color"
        app:layout_constraintTop_toBottomOf="@id/tituloSeleccionarFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"  />

    <!-- Texto de archivo seleccionado -->
    <TextView
        android:id="@+id/textoArchivoSeleccionado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/archivo_seleccionado_label"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/botonSeleccionarArchivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Botón de agregar archivo a la playlist -->
    <Button
        android:id="@+id/botonAgregarFileToPlayList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_agregar_archivo_playlist"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_color"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/textoArchivoSeleccionado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Lista de canciones de la playlist -->
    <ListView
        android:id="@+id/ListaDeCancionesDeLaPlayList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_light"
        android:divider="@android:color/white"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@id/botonAgregarFileToPlayList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
