<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="32dp"
    tools:context=".AddPlaylistActivity">

    <TextView
        android:id="@+id/tituloAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo_agregar_playlist"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloEditAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indica_nombre_playlist"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tituloAgregar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputAgregarPlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tituloEditAgregar"
        android:hint="@string/nombre_playlist_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAgregarPlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonAgregarPlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_agregar_playlist"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/TextInputAgregarPlayList" />

    <TextView
        android:id="@+id/tituloAgregarCancionesListaReproduccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Agrega Canciones a tu PlayList"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/botonAgregarPlayList" />

    <ListView
        android:id="@+id/listasPlayLists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorFondoLista"
        app:layout_constraintTop_toBottomOf="@id/tituloAgregarCancionesListaReproduccion"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
